--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat:wght@400;600&display=swap');
 
+:root{
+    --cor-principal: #000000;
+    --cor-secundaria: #F6F6F6;
+    --cor-terciaria: #22D4FD;
+
+    --fonte-principal: 'Monstserrat', sans-serif;
+    --fonte-secundaria: 'Krona One', sans-serif;
+}
+
 *{
     margin: 0;
     padding: 0;
@@ -7,8 +16,8 @@
 
 body{
     box-sizing: border-box;
-    background-color: #000000;
-    color: #F6F6F6;
+    background-color: var(--cor-principal);
+    color: var(--cor-secundaria);
 }
 
 .cabecalho{
@@ -21,15 +30,15 @@ body{
 }
 
 .cabecalho-menu-link{
-    font-family: 'Monstserrat', sans-serif;
+    font-family: var(--fonte-principal);
     font-size: 24px;
     font-weight: 600;
-    color: #22D4FD;
+    color: var(--cor-terciaria);
     text-decoration: none;
 }
 
 .cabecalho-menu-link:hover{
-    color: #F6F6F6;
+    color: var(--cor-secundaria);
 }
 
 .apresentacao{
@@ -40,7 +49,7 @@ body{
 }
 
 .titulo-destaque{
-    color: #22D4FD;
+    color: var(--cor-terciaria);
 }
 
 .apresentacao__conteudo{
@@ -52,12 +61,12 @@ body{
 
 .apresentacao__conteudo__titulo{
     font-size: 36px;
-    font-family: 'Krona One', sans-serif;
+    font-family: var(--fonte-secundaria);
 }
 
 .apresentacao__conteudo__texto{
     font-size: 24px;
-    font-family: 'Montserrat', sans-serif;
+    font-family: var(--fonte-principal);
 }
 
 .apresentacao__links{
@@ -69,7 +78,7 @@ body{
 }
 
 .apresentacao__links__subtitulo{
- font-family: 'Krona One', sans-serif; 
+ font-family: var(--fonte-secundaria);
  font-size: 24px;  
  font-weight: 400;
 }
@@ -78,7 +87,7 @@ body{
     display: flex;
     justify-content: center;
     gap:16px;
-    border:2px solid #22D4FD;
+    border:2px solid var(--cor-terciaria);
     border-radius:8px;
     width: 378px;
     text-align: center;
@@ -87,8 +96,8 @@ body{
     font-weight: 600;
     padding: 21.5px 0;
     text-decoration: none;
-    color: #F6F6F6;
-    font-family: 'Montserrat', sans-serif;
+    color: var(--cor-secundaria);
+    font-family: var(--fonte-principal);
 }
 
 .apresentacao__links__link:hover{
@@ -96,11 +105,11 @@ body{
 }
 
 .rodape{
-    color:#000000;
-    background-color: #22D4FD;
+    color:var(--cor-principal);
+    background-color: var(--cor-terciaria);
     padding:24px;
     text-align: center;
-    font-family: 'Montserrat', sans-serif;
+    font-family: var(--fonte-principal);
     font-size:24px;
     font-weight: 400;
 }
