--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ body{
 
 .cabecalho-menu-link{
     font-family: var(--fonte-principal);
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 600;
     color: var(--cor-terciaria);
     text-decoration: none;
@@ -39,6 +39,10 @@ body{
 
 .cabecalho-menu-link:hover{
     color: var(--cor-secundaria);
+}
+
+.apresentacao-imagem{
+    width: 50%;
 }
 
 .apresentacao{
@@ -53,19 +57,19 @@ body{
 }
 
 .apresentacao__conteudo{
-    width: 615px;
+    width: 50%;
     display: flex;
     flex-direction: column;
     gap: 40px;
 }
 
 .apresentacao__conteudo__titulo{
-    font-size: 36px;
+    font-size: 2.25rem;
     font-family: var(--fonte-secundaria);
 }
 
 .apresentacao__conteudo__texto{
-    font-size: 24px;
+    font-size: 1.5rem;
     font-family: var(--fonte-principal);
 }
 
@@ -79,7 +83,7 @@ body{
 
 .apresentacao__links__subtitulo{
  font-family: var(--fonte-secundaria);
- font-size: 24px;  
+ font-size: 1.5rem;  
  font-weight: 400;
 }
 
@@ -89,10 +93,10 @@ body{
     gap:16px;
     border:2px solid var(--cor-terciaria);
     border-radius:8px;
-    width: 378px;
+    width: 50%;
     text-align: center;
     border-radius: 16px;
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 600;
     padding: 21.5px 0;
     text-decoration: none;
@@ -110,7 +114,7 @@ body{
     padding:24px;
     text-align: center;
     font-family: var(--fonte-principal);
-    font-size:24px;
+    font-size:1.5rem;
     font-weight: 400;
 }
 
