--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap: 82px;
 }
 
 .titulo-destaque{
@@ -118,3 +119,16 @@ body{
     font-weight: 400;
 }
 
+@media(max-width:1200px){
+    .cabecalho{
+        padding:10%;
+    }
+
+    .cabecalho-menu{
+        justify-content: center;
+    }
+
+    .apresentacao{
+        flex-direction: column-reverse;
+    }
+}
